<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_50"
    android:paddingBottom="@dimen/dimen_16"
    tools:context=".app.module.ui.auth.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textAllCaps="true"
        android:textSize="@dimen/text_xLarge"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25"
        android:layout_marginEnd="@dimen/dimen_25"
        android:src="@drawable/welcome_signin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        style="@style/ButtonSecondary"
        android:stateListAnimator="@null"
        android:text="@string/sign_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="@style/ButtonPrimary"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:layout_marginTop="0dp"/>
    <TextView

        style="@style/text_meduim_label"
        android:text="@string/welcome_msg"
        android:lineSpacingExtra="5dp"
        android:paddingStart="@dimen/dimen_20"
        android:paddingEnd="@dimen/dimen_20"
        />
</LinearLayout>