<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lay_cancel_reason_bsd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/two_side_round_rec"
    android:padding="@dimen/dimen_16">

    <LinearLayout
        android:id="@+id/lay_vechicle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:padding="@dimen/dimen_10"
            android:src="@drawable/cancel_ride_img" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cancel_reason"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100"
            android:layout_marginVertical="@dimen/dimen_10"
            android:background="@drawable/bg_border_filled"
            android:hint="@string/write_cancellation_reason"
            android:inputType="textMultiLine"
            android:paddingVertical="@dimen/dimen_5"
            android:paddingStart="@dimen/dimen_5"
            android:paddingEnd="@dimen/dimen_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/ButtonPrimary"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_0"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_weight="1"
                android:stateListAnimator="@null"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit_reason"
                style="@style/ButtonPrimary"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_0"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginEnd="0dp"
                android:stateListAnimator="@null"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>